# media-codec-vpx

./: Cargo.toml  LICENSE-MIT  README.md
src/: decoder.rs  lib.rs
sys/: Cargo.toml  build.rs
sys/include/: vpx.h  wrapper.h
sys/src/: lib.rs
